--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -10,6 +10,14 @@
 
 .food {
   margin-top: 10px;
+  background-color: #ff4d94;
+  transform: scale(0.9);
+  transition: 0.3s;
+}
+
+.food:hover {
+  transform: scale(1.0);
+  transition: 0.3s;
 }
 
 .food img {
